Base template app2

--- a/flask/templates/contact.html
+++ b/flask/templates/contact.html
@@ -1,3 +1,12 @@
+<!-- <!DOCTYPE html>
+<head>
+    <title>Contact</title>
+</head>
+<body>
+    <h1>Email : rajatupadhyaya066@gmail.com</h1>
+    <h2>Phone No : +91-7077936033</h2>
+</body> -->
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -18,7 +27,7 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/home_page.css') }}">
 
-    <title>Services</title>
+    <title>Contact</title>
 
   </head>
 
@@ -34,7 +43,7 @@
 
       <ul class="nav-links">
 
-        <!-- <li><a href="../index.html">Home</a></li> -->
+        <li><a href="/">Home</a></li>
 
         <!-- <li><a href="about.html">About</a></li> -->
 
@@ -45,8 +54,8 @@
       </ul>
 
     </nav>
-
-    <div class="body-text"><h1>This is Services Page!</h1></div>
+        <h1>Email : rajatupadhyaya066@gmail.com</h1>
+        <h2>Phone No : +91-7077936033</h2>
 
   </body>
 
