--- a/flask/templates/user.html
+++ b/flask/templates/user.html
@@ -28,7 +28,7 @@
 
       <div class="heading">
 
-        <li><a href="/login">Login</a></li>
+        <li><a href="/">Logout</a></li>
 
       </div>
 
@@ -40,13 +40,13 @@
 
         <!-- <li><a class="active" href="services.html">Services</a></li> -->
 
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>
 
       </ul>
 
     </nav>
 
-    <div class="body-text"><h1>This is Services Page!</h1></div>
+    <div class="body-text"><h1>This is Home Page of {{msg1}}</h1></div>
 
   </body>
 
