--- a/flask/templates/landing.html
+++ b/flask/templates/landing.html
@@ -28,7 +28,7 @@
 
       <div class="heading">
 
-        <li><a href="/login">Login</a></li>
+        <li><a >Hello {{username}}</a></li>
 
       </div>
 
@@ -46,7 +46,11 @@
 
     </nav>
 
-    <div class="body-text"><h1>Welcome to my web portal</h1></div>
+    <div class="body-text">
+      <h1>
+        Welcome to User Home page
+      </h1>
+    </div>
 
   </body>
 
