--- a/flask/templates/login.html
+++ b/flask/templates/login.html
@@ -60,7 +60,7 @@
 					<i class="fas fa-lock"></i>
 				</label>
 				<input type="password" name="password" placeholder="Password" id="password" required>
-				<div class="msg">{{ msg }}</div>
+				<div class="msg">{{ error_msg }}</div>
 				<input type="submit" value="Login">
 			</form>
 		</div>
