--- a/flask/templates/contact.html
+++ b/flask/templates/contact.html
@@ -37,13 +37,11 @@
 
       <div class="heading">
 
-        <li><a href="/login">Login</a></li>
+        <li><a href="/">Home</a></li>
 
       </div>
 
       <ul class="nav-links">
-
-        <li><a href="/">Home</a></li>
 
         <!-- <li><a href="about.html">About</a></li> -->
 
@@ -54,8 +52,14 @@
       </ul>
 
     </nav>
+
+    <div, class="content",>
+      <center>
         <h1>Email : rajatupadhyaya066@gmail.com</h1>
-        <h2>Phone No : +91-7077936033</h2>
+        <h2>Phone No : (+91)7077936033(whatsapp)</br>
+          (+91)8917568216</h2>
+      </center>
+    </div>
 
   </body>
 
