--- a/flask/templates/base.html
+++ b/flask/templates/base.html
@@ -40,7 +40,8 @@
 
         <!-- <li><a class="active" href="services.html">Services</a></li> -->
 
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>
+        <!-- <li><a href="/login">Login</a></li> -->
 
       </ul>
 
