--- a/flask/templates/landing.html
+++ b/flask/templates/landing.html
@@ -40,7 +40,7 @@
 
         <!-- <li><a class="active" href="services.html">Services</a></li> -->
 
-        <li><a href="/contact.html">Contact</a></li>
+        <li><a href="{{url_for('logout')}}">Logout</a></li>
 
       </ul>
 
